--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
 #CHROME or FIREFOX
-browser=CHROME
+browser=FIREFOX
 
 #features
 featureFolders =
 cucumberOptions =
 
 #Web Sites
-baseurl = https://courses.ultimateqa.com/users/sign_in
+baseurl = http://localhost:4200/login
 
 #Waits
 implicitTimeWait=15
 explicitTimeWait=30
 
 #User Credentials PHP travels
-username=automation.diplomado.dh@outlook.com
-password=Password123
+username=admi
+password=123
