--- a/gradle.properties
+++ b/gradle.properties
@@ -6,12 +6,12 @@ featureFolders =
 cucumberOptions =
 
 #Web Sites
-baseurl = https://courses.ultimateqa.com/users/sign_in
+baseurl = http://localhost:4200/login
 
 #Waits
-implicitTimeWait=15
+implicitTimeWait=30
 explicitTimeWait=30
 
 #User Credentials PHP travels
-username=automation.diplomado.dh@outlook.com
-password=Password123
+username=admin
+password=admin123
